Suite test de libelles visiblement non categorisable (non reconnu) ajout de verification de ces cas pour eviter exceptions null